--- a/bin/boundary/ShopHomePage.fxml
+++ b/bin/boundary/ShopHomePage.fxml
@@ -31,8 +31,8 @@
           </image>
         </ImageView>
         <Separator layoutX="199.0" layoutY="352.0" prefHeight="10.0" prefWidth="599.0" />
-        <Button fx:id="searchCaritasButton" layoutX="201.0" layoutY="358.0" mnemonicParsing="false" onAction="#cerca_caritas" prefHeight="116.0" prefWidth="298.0" text="Cerca Caritas" />
-        <Button fx:id="gest_event" layoutY="478.0" mnemonicParsing="false" onAction="#gestisci_eventi" prefHeight="116.0" prefWidth="599.0" text="Gestisci Eventi" AnchorPane.rightAnchor="1.0" />
+        <Button fx:id="searchCaritasButton" layoutX="201.0" layoutY="358.0" mnemonicParsing="false" onAction="#cercaCaritas" prefHeight="116.0" prefWidth="298.0" text="Cerca Caritas" />
+        <Button fx:id="gestEvent" layoutY="478.0" mnemonicParsing="false" onAction="#gestisciEventi" prefHeight="116.0" prefWidth="599.0" text="Gestisci Eventi" AnchorPane.rightAnchor="1.0" />
         <Text fx:id="textOverImages" layoutX="393.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search, Find, Help.">
           <font>
             <Font size="24.0" />
