--- a/src/boundary/Prenota_turno_volontariato.fxml
+++ b/src/boundary/Prenota_turno_volontariato.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bean.PrenotaTurnoBoundary">
    <children>
-      <ChoiceBox fx:id="Turni" layoutX="215.0" layoutY="194.0" prefHeight="25.0" prefWidth="232.0" />
+      <ChoiceBox fx:id="turni" layoutX="215.0" layoutY="194.0" prefHeight="25.0" prefWidth="232.0" />
       <Text layoutX="13.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="In quale turno ti vuoi prenotare?">
          <font>
             <Font size="13.0" />
