--- a/src/boundary/CaritasHomePage.fxml
+++ b/src/boundary/CaritasHomePage.fxml
@@ -43,7 +43,7 @@
             <Font size="24.0" />
           </font>
         </Text>
-        <Button fx:id="logoutButton" layoutX="49.0" layoutY="515.0" mnemonicParsing="false" onAction="#logoutButtonPressed" prefHeight="26.0" prefWidth="103.0" text="Logout" />
+        <Button fx:id="logoutButton" layoutX="49.0" layoutY="515.0" mnemonicParsing="false" onAction="#logoutButtonPressedCaritas" prefHeight="26.0" prefWidth="103.0" text="Logout" />
         <ImageView fitHeight="84.0" fitWidth="103.0" layoutX="49.0" layoutY="422.0" pickOnBounds="true" preserveRatio="true">
           <image>
             <Image url="file:/C:/Users/Admin/Desktop/JUST-THINK-IT.git/trunk/resources/images/logout-icon.png" />
@@ -64,8 +64,8 @@
             <Font name="System Bold" size="16.0" />
           </font>
         </Text>
-        <Button fx:id="leftArrowButton" layoutX="204.0" layoutY="187.0" mnemonicParsing="false" onAction="#leftArrowPressed" opacity="0.0" prefHeight="26.0" prefWidth="25.0" />
-        <Button fx:id="rightArrowButton" layoutX="762.0" layoutY="187.0" mnemonicParsing="false" onAction="#rightArrowPressed" opacity="0.0" prefHeight="26.0" prefWidth="25.0" />
+        <Button fx:id="leftArrowButton" layoutX="204.0" layoutY="187.0" mnemonicParsing="false" onAction="#leftArrowPressedCaritas" opacity="0.0" prefHeight="26.0" prefWidth="25.0" />
+        <Button fx:id="rightArrowButton" layoutX="762.0" layoutY="187.0" mnemonicParsing="false" onAction="#rightArrowPressedCaritas" opacity="0.0" prefHeight="26.0" prefWidth="25.0" />
         <ImageView fx:id="profileImage" fitHeight="129.0" fitWidth="172.0" layoutX="14.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
           <image>
             <Image url="file:/C:/Users/Admin/Desktop/JUST-THINK-IT.git/trunk/resources/images/defalutUserProfile.png" />
