--- a/bin/boundary/RegistrazioneVolontario.fxml
+++ b/bin/boundary/RegistrazioneVolontario.fxml
@@ -35,7 +35,7 @@
       <Separator layoutX="294.0" layoutY="62.0" orientation="VERTICAL" prefHeight="354.0" prefWidth="14.0" />
       <ToolBar layoutX="1.0" prefHeight="38.0" prefWidth="600.0">
          <items>
-            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonPressed" text="Indietro" />
+            <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonPres" text="Indietro" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registrazione come Volontario" translateX="107.0">
                <font>
                   <Font size="20.0" />
