--- a/WebContent/css/gestisciTurni.css
+++ b/WebContent/css/gestisciTurni.css
@@ -1,34 +1,8 @@
 @charset "ISO-8859-1";
 body{
-/*background-image:URL("../img/mani.jpg");
+/*background-image:URL("../img/colori.jpg");
 background-size:cover;*/
 }
-/*h2{
-	position:absolute;
-	top:0%;
-	left:0%;
-	font-size:60px;
-	color: black;
-	text-align:center;
-	margin: 25px 0;
-	background-color: red;
-	height:11%;
-	width:100%;
-	color:white;
-	padding:0px;
-}*/
-
-h2{
-	position:absolute;
-	top:0px;
-	text-align:center;
-	left:70%;
-	font-size:60px;
-	font-family: MV boli;
-	color:black;
-	
-}
-
 
 h1{
 	position:absolute;
@@ -48,24 +22,19 @@ h1{
 
 .ind a{
 	position:absolute;
-	font-size:12px;
-	top:90%;
+	font-size:25px;
+	font-weight:bold;
+	top:87%;
 	left:8%;
+	color:blue;
 	text-decoration: none;
 }
 
 a:hover
 {
-	color: yellow;
+	color:rgb(6,255,0);
 }
 
-h4{
-	position:absolute;
-	left:35%;
-	font-size:22px;
-	color:black;
-	top:47px;
-}
 
 .crea button[type="submit"]
 {
@@ -159,53 +128,8 @@ a:hover
 }
 
 
-.content-table {
-  border-collapse: collapse;
-  font-size: 14px;
-  min-width:500px;
-  height:250px;
-   font-weight: bold;
-  border-radius: 2px 2px 2px 2px;
-  box-shadow: 3px 3px 3px 3px;
-}
-
-.content-table thead tr {
-  color:red;
-  text-align: left;
-  font-weight: bold;
-  font-size:25px;
-}
 
 
-.content-table th,
-.content-table td {
-  padding: 15px 20px ;
-}
-
-
-.content-table  th,
-.content-table tbody tr {
-  border-bottom: 1px solid black;
-}
-
-/*.content-table tbody tr:nth-of-type(even) {
-  background-color: white;
-}*/
-
-.content-table tbody tr:last-of-type {
-  border-bottom: 1px solid ;
-}
-
-.content-table tbody tr.active-row {
-  font-weight: bold;
- 
-}
-
-.tab{
-	position:absolute;
-	top:28%;
-	left:8%;
-}
 
 .note{
 	position:absolute;
@@ -235,4 +159,53 @@ textarea{
 .ind button[type="submit"]:hover
 {
 		color:red;	
+}
+
+
+.tab{
+	position:absolute;
+	top:26%;
+	left:8%;
+}
+
+.content-table {
+  border-collapse: collapse;
+  font-size: 12px;
+  min-width:200px;
+  height:150px;
+   font-weight: bold;
+  border-radius: 2px 2px 2px 2px;
+  box-shadow: 3px 3px 3px 3px;
+}
+
+.content-table thead tr {
+  color:red;
+  text-align: left;
+  font-weight: bold;
+  font-size:14px;
+}
+
+
+.content-table th,
+.content-table td {
+  padding: 15px 20px ;
+}
+
+
+.content-table  th,
+.content-table tbody tr {
+  border-bottom: 1px solid black;
+}
+
+/*.content-table tbody tr:nth-of-type(even) {
+  background-color: white;
+}*/
+
+.content-table tbody tr:last-of-type {
+  border-bottom: 1px solid ;
+}
+
+.content-table tbody tr.active-row {
+  font-weight: bold;
+ 
 }
